Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1048

C data file writer uses too much stack space

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.6.3
    • 1.7.0
    • c
    • None

    Description

      The avro_file_writer code in the C bindings allocate a large (64K) buffer on the stack. This causes (very) hard-to-diagnose bugs if you try to output a data file from within a function with limited stack space. (For instance, if you're running inside of a coroutine or thread with a 64K stack...)

      Attachments

        Activity

          People

            dcreager Douglas Creager
            dcreager Douglas Creager
            Votes:
            1 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: