AVRO-1048. C: Use less stack space in avro_file_writer_create

The avro_file_writer_create function use to allocate a 64K buffer on the
stack to render the JSON encoding of the file's schema into.  This isn't
really the best if you've got limited stack space — for instance, if
you're creating a data file from a thread or coroutine with a 64K stack.
This patch moves the scratch buffer into the avro_file_writer instance
itself; we're already allocating that from the heap, and it's easy
enough to add the 64K buffer to the end of the type.


git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1331813 13f79535-47bb-0310-9956-ffa450edef68